--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-numpy
+numpy==1.21.6
 streamlit==1.12.2
-pandas
-matplotlib
-seaborn
+pandas==0.25.1
+matplotlib==3.1.1
+seaborn==0.11.0
 pybase64==1.2.3
