--- a/.gitignore/.streamlit/secrets.toml
+++ b/.gitignore/.streamlit/secrets.toml
@@ -1,7 +1,7 @@
 
 # .streamlit/secrets.toml
 
-private_gsheets_url = "https://docs.google.com/spreadsheets/d/1Y5ukciwEt0uKeAjlnKRKrAEJfuXRbp-3JnG_bu-cIt8/edit?usp=share_link"
+private_gsheets_url = "https://docs.google.com/spreadsheets/d/1Y5ukciwEt0uKeAjlnKRKrAEJfuXRbp-3JnG_bu-cIt8/edit#gid=892311736"
 
 [gcp_service_account]
 type = "service_account"
